Java-hello/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hola-mundo-deployment
  namespace: app-java  # Reemplaza "nombre-del-namespace" con el nombre deseado del namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hola-mundo-deployment
  template:
    metadata:
      labels:
        app: hola-mundo-deployment
    spec:
      containers:
      - name: hola-mundo-container
        image: 654654145084.dkr.ecr.us-east-1.amazonaws.com/my-app-java:latest
        ports:
        - containerPort: 4567
        resources:
          limits:
            memory: 256Mi
            cpu: 100m
          requests:
            memory: 128Mi
            cpu: 50m
