Java-hello/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service-lb
  namespace: test
spec:
  selector:
    type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    role: test
