Java-hello/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mi-ingress
  namespace: test  # Asegúrate de que sea el mismo namespace que tu servicio
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: mi-app
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-service-lb
            port:
              number: 80  # Debes especificar el puerto del servicio (puerto del LoadBalancer)
